<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serl_franka_controllers</name>
  <version>0.1.1</version>
  <description>serl_franka_controllers provides a compliant yet accurate Cartesian impedance controller for controlling Franka Emika research robots that can be used in online reinforcement learning applications</description>
  <maintainer email="xuc@berkeley.edu">Charles Xu</maintainer>
  <license>MIT</license>

  <url type="website">https://serl-robot.github.io/</url>
  <url type="repository">https://github.com/rail-berkeley/serl_franka_controllers/</url>
  <author>Jianlan Luo, Charles Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>controller_interface</depend>
  <depend>franka_hardware</depend>
  <depend>franka_semantic_components</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
